--- a/code.html
+++ b/code.html
@@ -3,6 +3,7 @@
     <script language="javascript" type="text/javascript" src="molecule.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
     <script language="javascript" type="text/javascript" src="dat.gui.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
